// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IndicatorList > renders correct HTML structure (ol, 5 items) 1`] = `
"<ol class="indicator-list">
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
</ol>"
`;

exports[`IndicatorList > renders correct HTML structure (ul, 3 items) 1`] = `
"<ul class="indicator-list">
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
</ul>"
`;

exports[`IndicatorList > renders correct HTML structure with indicator slots 1`] = `
"<ul class="indicator-list">
  <li class="has-indicator indicator-top indicator-disc">
    <div class="indicator-list__indicator-custom"><span class="indicator-icon">✓</span></div>
    <div><span>First item</span></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div><span>Second item</span></div>
  </li>
</ul>"
`;

exports[`IndicatorList > renders correct HTML structure with styleClassPassthrough 1`] = `
"<ul class="indicator-list custom-class another-class">
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div></div>
  </li>
</ul>"
`;

exports[`IndicatorList > renders correctly with all props and slots combined 1`] = `
"<ol class="indicator-list combined-class">
  <li class="has-indicator indicator-top indicator-disc">
    <div class="indicator-list__indicator-custom"><span class="indicator-icon">1</span></div>
    <div><span>Step one</span></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div><span>Step two</span></div>
  </li>
  <li class="indicator-top indicator-disc">
    <div class="indicator-list__indicator-counter"></div>
    <div><span>Step three</span></div>
  </li>
</ol>"
`;
